--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   centerline:
     container_name: centerline
-    image: centerline:0.6.4
+    image: spbima/centerline:0.6.4
     restart: always
     ports:
-      - "DOCKER_CENTERLINE_PORT:8000"
+      - "8000:8000"
